# advanced-vision

./: .env.example  .gitignore  AGENT_SWARM_CONTRACT.md  ARCHITECTURE_GAP.md  COMPUTER_USE_ENV.md  EXECUTION_PLAN.md  EXECUTION_STATUS.md  IMPLEMENTATION_LOG.md  ISSUES.md  OPENCLAW_READINESS_REPORT.md  PHASE_E1_E2_STATUS.md  README.md  SERVICE_CONTRACTS.md  SKILL.md  TRADING_IMPLEMENTATION.md  WHATS_WORKING.md  WSS_SCHEMA_CHANGES.md  WSS_V2_MIGRATION.md  dads-findings.md  plan.md  pyproject.toml  setup_yolo_training.py  skill_manifest.json  work_log_20260316_164233.json
.venv-computer-use/: pyvenv.cfg
analysis/: 01-structure.md  02-code-summary.md  06-gaps.md  11-aya-task-list.md  phase1-report.md  phase3-report.md
benchmarks/: eagle2_results.json  mobilesam_results.json  pipeline_latency.json  pretrained_ui_yolo_eval.json  qwen4b_results.json  screen_capture_analysis.json  yolo_model_comparison.json  yolo_screen_detection_results.json
brain/: FIXES.md  ISSUES.md  TASKS.md  WORKLOG.md
config/: model_registry.json  schemas.yaml  vllm.yaml  wss_config.yaml
configs/: settings.example.yaml
docs/: ANTIGRAVITY_FEATURES.md  ANTIGRAVITY_META_AGENTING.md  API_KEY_AND_VISION.md  ARCHITECTURE.md  ARCHITECTURE_PRINCIPLES.md  BASELINE_APPROACH.md  BENCHMARK_EAGLE2.md  BENCHMARK_MOBILESAM.md  BENCHMARK_PIPELINE.md  BENCHMARK_QWEN4B.md  CHATGPT_VALIDATION.md  COLLABORATION_WITH_ARBITER.md  COMPUTER_USE_INTEGRATION.md  E2E_TESTING.md  GOVERNOR_SPEC.md  KIMI_CODE_DISCOVERY.md  LIMITATIONS.md  MODEL_CAPABILITIES.md  MODEL_SETUP_SUMMARY.md  PHASE_E4_VIDEO.md  QUICKSTART.md  (+20 more)
(+218 files in other folders)
