[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-vision"
version = "0.1.0"
description = "Standalone minimal MCP-based local computer-use capability layer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7.0",
  "mcp>=1.0.0",
  "Pillow>=10.0.0",
  "pyautogui>=0.9.54",
  "pygetwindow>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
advanced-vision-server = "advanced_vision.server:run"
advanced-vision-diagnostics = "advanced_vision.diagnostics:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
